--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-linking": "~7.0.5",
     "expo-constants": "~17.0.8",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
