--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~52.0.46",
+    "expo-constants": "~17.0.8",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.20",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.8.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "expo-router": "~4.0.20",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.8",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-web": "~0.19.13",
-    "@expo/vector-icons": "^14.0.2",
-    "expo-font": "~13.0.4"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
